--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
+include_directories("/usr/include/eigen3")
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
